fix article alignment & date format

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -62,6 +62,13 @@
             height: 8rem;
             background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 60%);
         }
+
+        .quote-bucket,
+        iframe {
+            width: 0;
+            height: 0;
+            overflow: hidden;
+        }
     }
 
     .meta {
