--- a/src/app/pages/blog/articles/articles.scss
+++ b/src/app/pages/blog/articles/articles.scss
@@ -79,5 +79,6 @@
     .container {
         display: flex;
         flex-flow: row wrap;
+        width: 100%;
     }
 }
